# Master_Data_Engineering

./: .gitignore  README.md  requirements.txt
1.Python_para_desarrolladores/: Descripcion.md
1.Python_para_desarrolladores/Tarea1/: README.md  enunciado.html  etapa_1_notebook.ipynb  etapa_1_notebook_con_clase.ipynb  pyproject.toml
1.Python_para_desarrolladores/Tarea1/bicimad/: __init__.py  bicimad.py  bidicmad.py  urlemt.py
1.Python_para_desarrolladores/Tarea1/bicimad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
1.Python_para_desarrolladores/Tarea1/tests/: test_bicimad.py
1.Python_para_desarrolladores/ej1/: enunciado.md  solution.py
1.Python_para_desarrolladores/ej2_numpy_1/: ith.py
1.Python_para_desarrolladores/ej3_numpy_2/numpy_example_2/: zonal_stat.py
1.Python_para_desarrolladores/ej3_numpy_2/numpy_example_2/datos/: valores2.txt  zonas2.txt
1.Python_para_desarrolladores/ej4/: README.md  enunciado.md  main.py  pyproject.toml
1.Python_para_desarrolladores/ej4/geom2d/: __init__.py  point.py  vector.py
1.Python_para_desarrolladores/ej4/geom2d.egg-info/: PKG-INFO  SOURCES.txt
1.Python_para_desarrolladores/ej4/tests/: test_geom2.py
2.Scala/: Descripcion.md
2.Scala/Ejemplo/: build.sbt
2.Scala/Ejemplo/.bsp/: sbt.json
2.Scala/Ejemplo/src/main/scala/: Ejemplo.sc  Ejemplo.scala
2.Scala/Ejercicios/src/main/: ttrain.sc
2.Scala/Ejercicios/src/main/tests/: testing.sc
2.Scala/Tarea/entregable_scala/: build.sbt
2.Scala/Tarea/entregable_scala/src/main/resources/: application.conf
2.Scala/Tarea/entregable_scala/src/main/scala/: FileUtils.scala  (+6 more)
(+5 files in other folders)
