[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bicimad"
version = "0.0.1"
requires-python = ">=3.8"
readme = "README.md"
license = {file = 'gpl-3.0.txt'}
authors = [
	{name = 'Jimmy Calvo', email = 'jimmyca@ucm.es'},
]

dependencies = [ "requests >= 2.1.0", "pandas >= 2.1.0"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

